--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "react": "^16.11.0",
     "react-dom": "^16.11.0",
     "react-scripts": "3.2.0",
+    "rxjs": "^6.5.3",
     "typescript": "3.6.4"
   },
   "scripts": {
